--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@hookform/resolvers": "^3.9.1",
+    "@supabase/supabase-js": "^2.98.0",
     "@tanstack/react-query": "^5.62.9",
     "@xiaozhuoban/ai-builder": "workspace:*",
     "@xiaozhuoban/contracts": "workspace:*",
